# LIGHTARCHITECT-AGENT-GYM

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
bible-data/: pyproject.toml  requirements.txt  run_generation.py  run_tests.py
bible-data/bible_data/: __init__.py  __main__.py  cli.py  constitution_data.py  dataset_integrator.py  dpo_generator.py  instruction_generator.py  kjv_parser.py  models.py
bible-data/output/: bible-dpo-pairs.json  constitution.md  dilemma-to-wisdom.json  narrative-to-principle.json  proverbs-to-guidance.json  verse-to-principle.json
bible-data/tests/: test_generator.py
data-extraction/: Cargo.toml
data-extraction/src/: main.rs  mixer.rs  types.rs
data-extraction/src/extractors/: bible.rs  helix.rs  mod.rs  quantum.rs  tool_schema.rs  trace.rs  transcript.rs
mcp_gym/: __init__.py  agents.py  cli.py  env.py  mock_surface.py  rewards.py  spaces.py  trace.py  training.py  types.py
mcp_gym/pipeline/: __init__.py  chatml.py  cli.py  ecosystem.py  expert_router.py  integrator.py  mixer.py  quality.py  schemas.py  synthetic.py  thinking.py  tools.py  voice_pairs.py
mcp_gym/scenarios/: __init__.py  loader.py  schema.py  state_machine.py
mcp_gym/scenarios/yaml/: investigation-cross-reference.yaml  investigation-evidence-chain.yaml  security-false-positive.yaml  security-incident-response.yaml  (+2 more)
mcp_gym/stubs/: __init__.py  corso.py  eva.py  quantum.py  soul.py
notebooks/: evaluation.ipynb
research/: LECTURE.md  RESEARCH.md
scenarios/: cross-domain-build-deploy.yaml  cross-domain-consciousness-audit.yaml  cross-domain-security-investigation.yaml  full-cycle-code-review.yaml  full-cycle-memory-enrichment.yaml  full-cycle-research-synthesis.yaml  investigation-cross-domain.yaml  investigation-evidence-chain.yaml  investigation-incident-triage.yaml  security-secret-detection.yaml  security-supply-chain-audit.yaml  security-vulnerability-scan.yaml
tests/: __init__.py  test_agents.py  test_env.py  test_mock_surface.py  test_rewards.py  test_scenarios.py  test_stubs.py  test_trace.py  test_training.py
training/: requirements.txt
training-data/: bible-alpaca.json  combined-alpaca.json  helix-alpaca.json  quantum-alpaca.json  test.json  tool-schemas-alpaca.json  traces-alpaca.json  train.json  transcripts-sharegpt.json  val.json
training/configs/: base.yaml  llama31_8b.yaml  mixtral_8x7b.yaml  modelfile.template  qwen3_8b.yaml
training/modelfiles/: README.md  architect.Modelfile  corso.Modelfile  eva.Modelfile  quantum.Modelfile  seraph.Modelfile  soul.Modelfile
training/scripts/: __init__.py  common.py  data_mixer.py  dpo_train.py  merge_export.py  setup_runpod.sh  sft_train.py  smoke_test.py
