[project]
name = "bible-data"
version = "1.0.0"
description = "Biblical training data pipeline for moral reasoning in AI systems"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "KFT — The Light Architect"},
]

dependencies = [
    "typer>=0.12.0,<1.0",
    "datasets>=2.18.0,<3.0",
    "pydantic>=2.6.0,<3.0",
    "rich>=13.7.0,<14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0,<1.0",
    "mypy>=1.9.0,<2.0",
    "pytest>=8.1.0,<9.0",
    "pytest-cov>=5.0.0,<6.0",
]

[project.scripts]
bible-data = "bible_data.cli:app"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S311"]  # random not used for crypto

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
